# cs-zephyr-app

./: CMakeLists.txt  Kconfig  README.md  west.yaml  west.yml
apps/blinky/: CMakeLists.txt  README.rst
apps/blinky/boards/: imxrt1176_som_mimxrt1176_cm7.overlay
apps/blinky/src/: main.c
apps/iolm-t03/: CMakeLists.txt  prj.conf
apps/iolm-t03/boards/: maax_imxrt1176_mimxrt1176_cm7.overlay
apps/iolm-t03/src/: app_handler.c  app_handler.h  main.c
boards/avnet/maaxboard_rt/: CMakeLists.txt  Kconfig.defconfig  Kconfig.maax_imxrt1176  board.cmake  board.yml  maax_imxrt1176-pinctrl.dtsi  maax_imxrt1176.dtsi  maax_imxrt1176_mimxrt1176_cm4.dts  maax_imxrt1176_mimxrt1176_cm4.yaml  maax_imxrt1176_mimxrt1176_cm4_defconfig  maax_imxrt1176_mimxrt1176_cm7.dts  maax_imxrt1176_mimxrt1176_cm7.yaml  maax_imxrt1176_mimxrt1176_cm7_defconfig
boards/calixto/imxrt1176_som/: CMakeLists.txt  Kconfig.defconfig  Kconfig.imxrt1176_som  board.cmake  board.yml  imxrt1176_som-pinctrl.dtsi  imxrt1176_som.dtsi  imxrt1176_som_mimxrt1176_cm4.dts  imxrt1176_som_mimxrt1176_cm4.yaml  imxrt1176_som_mimxrt1176_cm4_defconfig  imxrt1176_som_mimxrt1176_cm7.dts  imxrt1176_som_mimxrt1176_cm7.yaml  imxrt1176_som_mimxrt1176_cm7_defconfig
dts/bindings/spi/: renesas,cce4511.yaml
keys/: README.md
modules/boards/imxrt1176_som/: Kconfig  Kconfig.board  board.c  board.h  clock_config.c  dcd.c  set_board_imxrt1176_som.cmake
modules/boards/imxrt1176_som/xip/: Kconfig  driver_xip_board.cmake  driver_xip_board_imxrt1176_som.cmake  imxrt1176_som_flexspi_nor_config.c  imxrt1176_som_flexspi_nor_config.h
modules/boards/imxrt1176_som/xmcd/: Kconfig  xmcd.c
modules/boards/maaximxrt1170/: Kconfig  Kconfig.board  board.h  clock_config.c  evkmimxrt1170_connect_cm4_cm4side.jlinkscript  evkmimxrt1170_connect_cm4_cm4side_sdram.jlinkscript  set_board_evkmimxrt1170.cmake
modules/boards/maaximxrt1170/wireless_config_template/: sdmmc_config.h  wifi_bt_config.c
modules/boards/maaximxrt1170/xip/: Kconfig  driver_xip_board.cmake  driver_xip_board_evkmimxrt1170.cmake  maaximxrt1170_flexspi_nor_config.c  maaximxrt1170_flexspi_nor_config.h
modules/calixto-eeprom/: CMakeLists.txt  Kconfig
modules/calixto-ethernet/: CMakeLists.txt  Kconfig
modules/iol-master/: CMakeLists.txt  Kconfig  README.md
modules/iol-master/zephyr/: module.yml
zephyr/: module.yml
(+36 files in other folders)
